--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html>
 <head>
 <title>The Story of the Chinese Farmer</title>
+  <h1>The Story of the Chinese Farmer</h1>
+  <h2>11 may 2016, Alexandre Gorius</h2>
+<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Extinguisher guy">
+
 </head>
 <body>
 
-11 may 2016, Alexandre Gorius
+  <h2>Preamble</h2>
 
+  <ul>
+  <li>read this once</li>
+  <li>then red it again</li>
+  <li>then tell it to your best friend</li>
+</ul>
+  
+  <h1>The story</h1>
 
-<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Extinguisher guy">
+  <em>Alan Watts</em>
 
-
-Preamble
-
-- read this once
-- then read it again
-- then tell it to your best friend
-
-The story
-
-Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “Maybe.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “Maybe.” 
-
-The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”
-
-The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.
-
-Alan Watts
-
-
-----
+<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “Maybe.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “Maybe.”</p>
+  <br>
+<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”</p>
+  <br>
+<p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
+<hr>
 
 Here is this dialog in the form of a table
 
