--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 Here is this dialog in the form of a table
 
 <table>
-<thead>
+<thead><caption>Table representing the farmer's philosophy.</caption>
   <tr>
     <th>Event</th>
-    <th>Good or Bad ?</th>
+    <th class="Good">Good or Bad ?</th>
   </tr>
 </thead>
 <tbody>
@@ -56,8 +56,6 @@ Here is this dialog in the form of a table
   </tr>
 </tbody>
 </table>
-   Table representing the farmer's philosophy.
-
 
 Conclusion  
 Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...
