--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
 <hr>
 
-Here is this dialog in the form of a table
+  <h3>Here is this dialog in the form of a table</3>
 
 <table>
 <thead><caption>Table representing the farmer's philosophy.</caption>
