--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>The Story of the Chinese Farmer</title>
   <h1>The Story of the Chinese Farmer</h1>
